--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapsActivity" />
+    tools:context=".MapsActivity" >
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="521dp"
+        android:layout_gravity="top|center"
+        tools:context=".MapsActivity" />
+
+    <SearchView
+        android:id="@+id/mapsearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/common_google_signin_btn_text_dark_default"
+        android:closeIcon="@drawable/cancel_dark"
+        android:elevation="5dp"
+        android:inputType="text"
+        android:searchIcon="@drawable/search_dark"
+        android:textAlignment="center"
+        android:voiceIcon="@drawable/voice_dark"
+        android:soundEffectsEnabled="true">
+
+    </SearchView>
+
+</FrameLayout>
