lots of changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="textprimary">#000000</color>
+    <color name="colorPrimary">#577399</color>
+    <color name="colorPrimaryDark">#495867</color>
+    <color name="colorAccent">#FE5F55</color>
+    <color name="textprimary">#F7F7FF</color>
+    <color name="fullwhite">#ffffff</color>
+    <color name="black_overlay">#66000000</color>
+    <color name="transparent">#fff</color>
 </resources>
