29-07-2018 location details updated extendable lists added dynamic photo viewer added populated location details more handled some UI design

--- a/app/src/main/res/layout/activity_place_info.xml
+++ b/app/src/main/res/layout/activity_place_info.xml
@@ -24,7 +24,7 @@
             android:layout_height="50dp"
             android:textColor="@color/textprimary"
             android:textAlignment="center"
-            android:text="TEST"
+            android:text="@string/test"
             android:textSize="20sp"
             android:layout_gravity="center"/>
 
@@ -47,58 +47,317 @@
             android:layout_gravity="top"
             android:orientation="vertical">
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/placeimage"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_gravity="center"
+                    android:background="@color/colorPrimaryDark"
+                    android:src="@drawable/bhoodie" />
+
+                <ImageButton
+                    android:id="@+id/previousimage"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/previousbutton"
+                    android:layout_marginTop="120dp"/>
+
+                <ImageButton
+                    android:id="@+id/nextimage"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/nextbutton"
+                    android:layout_marginTop="120dp"
+                    android:layout_gravity="end" />
+
+            </FrameLayout>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/strokecolor" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/eatingicon"
+                    android:layout_marginEnd="10dp"/>
+                <TextView
+                    android:id="@+id/placename"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/test"
+                    android:textAlignment="center"
+                    android:textColor="@color/textprimary"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/strokecolor" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/buildingimage"
+                    android:layout_marginEnd="10dp"/>
+                <TextView
+                    android:id="@+id/placelocation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/test"
+                    android:textAlignment="center"
+                    android:textColor="@color/textprimary"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/strokecolor" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/phoneimage"
+                    android:layout_marginEnd="10dp"/>
+                <TextView
+                    android:id="@+id/placephoneno"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/test"
+                    android:textAlignment="center"
+                    android:textColor="@color/textprimary"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/strokecolor" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/starasset"/>
+                <TextView
+                    android:id="@+id/rating"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/test"
+                    android:textAlignment="center"
+                    android:textColor="@color/textprimary"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/strokecolor" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/opencloseicon"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginEnd="10dp"/>
+                <TextView
+                    android:id="@+id/istheplaceopen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/test"
+                    android:textAlignment="center"
+                    android:textColor="@color/textprimary"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/strokecolor" />
+
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
             <ImageView
-                android:id="@+id/placeimage"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_gravity="center"
-                android:background="@color/colorPrimaryDark"
-                android:src="@drawable/bhoodie" />
+                android:id="@+id/parkingbike"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/bikeicon"/>
+
+            <ImageView
+                android:id="@+id/parkingbikecheck"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/plusmark"/>
+
+            <ImageView
+                android:id="@+id/parkingcar"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/caricon"/>
+
+            <ImageView
+                android:id="@+id/parkingcarcheck"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/plusmark"/>
+
+        </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/strokecolor" />
 
-            <TextView
-                android:id="@+id/placename"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="TEST"
-                android:textAlignment="center"
-                android:textColor="@color/textprimary"
-                android:textSize="20sp" />
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/smokingicon"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/smokingicon"/>
+
+                <ImageView
+                    android:id="@+id/smokingcheck"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/plusmark"/>
+
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/strokecolor" />
 
-            <TextView
-                android:id="@+id/placelocation"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="TEST"
-                android:textAlignment="center"
-                android:textColor="@color/textprimary"
-                android:textSize="20sp" />
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/vatstatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/vat"
+                    android:textAlignment="center"
+                    android:textColor="@color/textprimary"
+                    android:textSize="20sp"
+                    android:layout_marginEnd="10dp"/>
+
+                <ImageView
+                    android:id="@+id/vatcheck"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/plusmark"/>
+
+                <TextView
+                    android:id="@+id/scstatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/servicecharge"
+                    android:textAlignment="center"
+                    android:textColor="@color/textprimary"
+                    android:textSize="20sp"
+                    android:layout_marginEnd="10dp"/>
+
+                <ImageView
+                    android:id="@+id/servicetaxcheck"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/plusmark"/>
+
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/strokecolor" />
 
-            <TextView
-                android:id="@+id/placephoneno"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="TEST"
-                android:textAlignment="center"
-                android:textColor="@color/textprimary"
-                android:textSize="20sp" />
+                android:layout_height="wrap_content">
+
+                <ExpandableListView
+                    android:id="@+id/menuexpandable"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:id="@+id/addfooditem"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/plusmark"
+                    android:layout_gravity="end|top"
+                    android:layout_marginTop="7dp"/>
+
+            </FrameLayout>
+
+
+
 
             <View
                 android:layout_width="match_parent"
@@ -108,12 +367,30 @@
             <ExpandableListView
                 android:id="@+id/expandablelist"
                 android:layout_width="match_parent"
-                android:layout_height="110dp" />
+                android:layout_height="wrap_content" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/strokecolor" />
+
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:stepSize="0.1"
+                android:layout_gravity="center"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/strokecolor" />
 
 
         </LinearLayout>
 
     </ScrollView>
+
 
 
 </FrameLayout>
