--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_width="167.33dp"
             android:layout_height="214dp"
             android:layout_gravity="center"
-            android:background="@drawable/bhoodie"/>
+            android:background="@drawable/bhoodie" />
 
         <EditText
             android:id="@+id/emaillogin"
@@ -33,7 +33,8 @@
             android:gravity="center"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:background="@drawable/roundedrectangle"/>
 
         <EditText
         android:id="@+id/passwordlogin"
@@ -45,7 +46,8 @@
         android:gravity="center"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+            android:background="@drawable/roundedrectangle"/>
 
 
         <Button
@@ -57,7 +59,8 @@
             android:text="@string/login"
             android:textColor="@color/textprimary"
             android:textSize="20sp"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false"
+            android:background="@drawable/roundedbutton"/>
         <Button
             android:id="@+id/registerbutton"
             android:layout_width="120dp"
@@ -67,7 +70,8 @@
             android:text="@string/register"
             android:textColor="@color/textprimary"
             android:textSize="20sp"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false"
+            android:background="@drawable/roundedbutton"/>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
