--- a/app/src/main/res/layout/menuitemadddialog.xml
+++ b/app/src/main/res/layout/menuitemadddialog.xml
@@ -1,38 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:background="@drawable/rounddialog"
     android:orientation="horizontal"
-    android:background="@drawable/rounddialog">
+    android:weightSum="2">
 
     <EditText
         android:id="@+id/foodname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/roundedrectangle"
         android:hint="@string/fooditem"
+        android:padding="10dp"
         android:textColor="@color/textprimary"
         android:textSize="20sp"
-        android:background="@drawable/roundedrectangle"
-        android:padding="10dp"/>
+        android:layout_gravity="center"
+        android:layout_weight="1"/>
 
     <EditText
         android:id="@+id/foodprice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/roundedrectangle"
+        android:layout_gravity="center"
         android:hint="@string/price"
+        android:padding="10dp"
         android:textColor="@color/textprimary"
         android:textSize="20sp"
-        android:background="@drawable/roundedrectangle"
-        android:layout_marginStart="20dp"
-        android:padding="10dp"/>
+        android:layout_weight="1"/>
 
-    <ImageView
+    <ImageButton
+        android:id="@+id/imageView"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:src="@drawable/plusmark"
-        android:layout_gravity="center|end"
-        android:layout_marginLeft="20dp"/>
+        android:layout_gravity="center"
+        android:background="@drawable/plusmark"
+        android:layout_weight="1"/>
+
 
 </LinearLayout>
